@@ -935,3 +935,5 @@ Version 1.6-5
    
    o Added Chinese translation (contributed by Frank C. S. Liu and Cheng-shun Lee).
    
+   o Startup sequence now offers to install missing packages but without dependencies=TRUE in call to install.packages().
+   
